--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,44 @@
   margin: 1em;
 }
 
-.CardClass {
+.FlipCard {
+  width: 10rem;
+  height: 10rem;
+  border: 0.7em cornflowerblue;
+  perspective: 1000px;
   margin: 1em;
 }
 
-.FlexRowCenter {
+.FlipCardInner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
 
+.FlipCard:hover .FlipCardInner {
+  transform: rotateY(180deg);
+}
+
+.FlipCardFront, .FlipCardBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.FlipCardFront {
+  background-color: #bbb;
+  color: black;
+}
+
+.FlipCardBack {
+  transform: rotateY(180deg);
+}
+
+.HighlightColours {
+  background-color: rgb(42, 156, 118);
+  color: white;
 }
